--- a/public/css/style.css
+++ b/public/css/style.css
@@ -411,3 +411,8 @@
     font-size: 15px;
     border-top: 1px solid rgba(256, 256, 256, .1)
 }
+
+.about-start {
+    width: 1519;
+    height: 740;
+}
